--- a/Curso_eco_2021/introdução-às-séries-temporais.html
+++ b/Curso_eco_2021/introdução-às-séries-temporais.html
@@ -64,6 +64,8 @@
 <script src="libs/selectize-0.12.0/selectize.min.js"></script>
 <link href="libs/crosstalk-1.1.1/css/crosstalk.css" rel="stylesheet" />
 <script src="libs/crosstalk-1.1.1/js/crosstalk.min.js"></script>
+<script src="libs/kePrint-0.0.1/kePrint.js"></script>
+<link href="libs/lightable-0.0.1/lightable.css" rel="stylesheet" />
 
 
 <style type="text/css">
@@ -258,6 +260,32 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.3.6" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelo-autorregressivo-integrado-de-médias-móveis-de-ordem-p-d-e-q---arimapdq"><i class="fa fa-check"></i><b>5.3.6</b> Modelo Autorregressivo Integrado de Médias Móveis de ordem <em>p</em>, <em>d</em> e <em>q</em> - ARIMA(p,d,q)</a></li>
 <li class="chapter" data-level="5.3.7" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#resumo---modelos-arima-não-sazonais"><i class="fa fa-check"></i><b>5.3.7</b> Resumo - Modelos ARIMA não sazonais</a></li>
 </ul></li>
+<li class="chapter" data-level="5.4" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelos-arima-sazonais-sarima---arimapdqpdq_m"><i class="fa fa-check"></i><b>5.4</b> Modelos ARIMA sazonais (SARIMA) - <span class="math inline">\(ARIMA(p,d,q)(P,D,Q)_m\)</span></a></li>
+<li class="chapter" data-level="5.5" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#função-de-autocorrelação-parcial-facp---partial-autocorrelation-function---pacf"><i class="fa fa-check"></i><b>5.5</b> Função de Autocorrelação Parcial (FACP) - (<em>Partial Autocorrelation Function - PACF</em>)</a></li>
+<li class="chapter" data-level="5.6" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#processo-de-modelagem"><i class="fa fa-check"></i><b>5.6</b> Processo de Modelagem</a></li>
+<li class="chapter" data-level="5.7" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#processo-de-identificação"><i class="fa fa-check"></i><b>5.7</b> Processo de Identificação</a>
+<ul>
+<li class="chapter" data-level="5.7.1" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#simulando-os-dados-das-st-com-estruturas-arima"><i class="fa fa-check"></i><b>5.7.1</b> Simulando os dados das ST com estruturas ARIMA</a></li>
+</ul></li>
+<li class="chapter" data-level="5.8" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#métricas-para-avaliar-a-qualidade-do-ajuste"><i class="fa fa-check"></i><b>5.8</b> Métricas para avaliar a qualidade do ajuste</a></li>
+<li class="chapter" data-level="5.9" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#análise-de-resíduos"><i class="fa fa-check"></i><b>5.9</b> Análise de Resíduos</a></li>
+<li class="chapter" data-level="5.10" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#ajuste-manual-de-modelo-arima"><i class="fa fa-check"></i><b>5.10</b> Ajuste manual de modelo ARIMA</a></li>
+<li class="chapter" data-level="5.11" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#ajuste-automático-de-modelos-arima"><i class="fa fa-check"></i><b>5.11</b> Ajuste automático de modelos ARIMA</a></li>
+<li class="chapter" data-level="5.12" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#modelos-de-previsão"><i class="fa fa-check"></i><b>5.12</b> Modelos de Previsão</a></li>
+<li class="chapter" data-level="5.13" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#correlação-cruzada-cross-correlation"><i class="fa fa-check"></i><b>5.13</b> Correlação Cruzada (<em>Cross-Correlation</em>)</a></li>
+<li class="chapter" data-level="5.14" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#gam-generalized-additive-models"><i class="fa fa-check"></i><b>5.14</b> GAM (Generalized Additive Models)</a>
+<ul>
+<li class="chapter" data-level="5.14.1" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#tipos-de-splines"><i class="fa fa-check"></i><b>5.14.1</b> Tipos de splines</a></li>
+<li class="chapter" data-level="5.14.2" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#por-que-não-usar"><i class="fa fa-check"></i><b>5.14.2</b> Por que não usar ?</a></li>
+<li class="chapter" data-level="5.14.3" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#gam-em-séries-temporais"><i class="fa fa-check"></i><b>5.14.3</b> GAM em Séries Temporais</a></li>
+<li class="chapter" data-level="5.14.4" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#exemplo-de-modelo-gam-aplicado-a-st-ldeaths"><i class="fa fa-check"></i><b>5.14.4</b> Exemplo de modelo GAM aplicado a ST ldeaths</a></li>
+<li class="chapter" data-level="5.14.5" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#exemplo-gam-casos-de-leptospirose-vs-clima"><i class="fa fa-check"></i><b>5.14.5</b> Exemplo GAM: Casos de Leptospirose <em>vs</em> Clima</a></li>
+</ul></li>
+<li class="chapter" data-level="5.15" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#exercícios-propostos-3"><i class="fa fa-check"></i><b>5.15</b> Exercícios Propostos</a>
+<ul>
+<li class="chapter" data-level="5.15.1" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#exercícios-resolvidos"><i class="fa fa-check"></i><b>5.15.1</b> Exercícios Resolvidos</a></li>
+</ul></li>
+<li class="chapter" data-level="5.16" data-path="modelagem-em-séries-temporais.html"><a href="modelagem-em-séries-temporais.html#bibliografia-sugerida-3"><i class="fa fa-check"></i><b>5.16</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="introdução-à-análise-estatística-espacial-padrão-de-pontos-i.html"><a href="introdução-à-análise-estatística-espacial-padrão-de-pontos-i.html"><i class="fa fa-check"></i><b>6</b> Introdução à Análise Estatística Espacial &amp; Padrão de Pontos I</a></li>
 <li class="chapter" data-level="7" data-path="análise-espacial-padrão-de-pontos-ii.html"><a href="análise-espacial-padrão-de-pontos-ii.html"><i class="fa fa-check"></i><b>7</b> Análise Espacial - Padrão de Pontos II</a></li>
@@ -292,8 +320,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="13.10" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#vantagens-1"><i class="fa fa-check"></i><b>13.10</b> Vantagens</a></li>
 <li class="chapter" data-level="13.11" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#desvantagens-1"><i class="fa fa-check"></i><b>13.11</b> Desvantagens</a></li>
 <li class="chapter" data-level="13.12" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#resumindo-1"><i class="fa fa-check"></i><b>13.12</b> Resumindo</a></li>
-<li class="chapter" data-level="13.13" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#exercícios-propostos-3"><i class="fa fa-check"></i><b>13.13</b> Exercícios Propostos</a></li>
-<li class="chapter" data-level="13.14" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#bibliografia-sugerida-3"><i class="fa fa-check"></i><b>13.14</b> Bibliografia sugerida</a></li>
+<li class="chapter" data-level="13.13" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#exercícios-propostos-4"><i class="fa fa-check"></i><b>13.13</b> Exercícios Propostos</a></li>
+<li class="chapter" data-level="13.14" data-path="estudos-ecológicos-1.html"><a href="estudos-ecológicos-1.html#bibliografia-sugerida-4"><i class="fa fa-check"></i><b>13.14</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="chapter" data-level="14" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html"><i class="fa fa-check"></i><b>14</b> Introdução às Séries Temporais</a>
 <ul>
@@ -332,9 +360,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.18.3" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#importando-uma-vetor-e-transformando-em-série-temporal-1"><i class="fa fa-check"></i><b>14.18.3</b> Importando uma vetor e transformando em Série Temporal</a></li>
 <li class="chapter" data-level="14.18.4" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#utilizando-dados-da-incidência-de-dengue-nas-filipinas-2008---2016-1"><i class="fa fa-check"></i><b>14.18.4</b> Utilizando dados da incidência de dengue nas Filipinas, 2008 - 2016</a></li>
 </ul></li>
-<li class="chapter" data-level="14.19" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#exercícios-propostos-4"><i class="fa fa-check"></i><b>14.19</b> Exercícios Propostos</a></li>
+<li class="chapter" data-level="14.19" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#exercícios-propostos-5"><i class="fa fa-check"></i><b>14.19</b> Exercícios Propostos</a></li>
 <li class="chapter" data-level="14.20" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#outros-materiais-sobre-séries-temporais-1"><i class="fa fa-check"></i><b>14.20</b> Outros materiais sobre Séries Temporais</a></li>
-<li class="chapter" data-level="14.21" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#bibliografia-sugerida-4"><i class="fa fa-check"></i><b>14.21</b> Bibliografia sugerida</a></li>
+<li class="chapter" data-level="14.21" data-path="introdução-às-séries-temporais-1.html"><a href="introdução-às-séries-temporais-1.html#bibliografia-sugerida-5"><i class="fa fa-check"></i><b>14.21</b> Bibliografia sugerida</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://ogcruz.github.io" target="blank">Página Inicial</a></li>
@@ -588,8 +616,8 @@ adiante no tempo - exemplo: doenças com grande latência como hanseníase);</p>
 para <span class="math inline">\(0\leq h \leq T-1\)</span>.</p>
 <p>Por exemplo, suponha que você está avaliando uma série temporal qualquer e quer visualizar como as defasagens da série podem impactar seu valor atual (ou seja, se <span class="math inline">\(Z_{t}\)</span> é relacionado com <span class="math inline">\(Z_{t-h}\)</span> para <span class="math inline">\(k\ge1\)</span>). A função de autocorrelação pode ser usada para obter tal informação.</p>
 <p>Num primeiro momento, visualize os dados da série para 10 lags (defasagens). Observe que os lags se tornam novas colunas e na medida que elas aumentam, incrementa-se as linhas sem observações.</p>
-<div id="htmlwidget-ad9c7985d08c0670deb8" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-ad9c7985d08c0670deb8">{"x":{"filter":"none","data":[[28.61,27.8,28.19,28.26,30.36,30.42,32.76,31.95,30.89,28.24],[null,28.61,27.8,28.19,28.26,30.36,30.42,32.76,31.95,30.89],[null,null,28.61,27.8,28.19,28.26,30.36,30.42,32.76,31.95],[null,null,null,28.61,27.8,28.19,28.26,30.36,30.42,32.76],[null,null,null,null,28.61,27.8,28.19,28.26,30.36,30.42],[null,null,null,null,null,28.61,27.8,28.19,28.26,30.36],[null,null,null,null,null,null,28.61,27.8,28.19,28.26],[null,null,null,null,null,null,null,28.61,27.8,28.19],[null,null,null,null,null,null,null,null,28.61,27.8],[null,null,null,null,null,null,null,null,null,28.61],[null,null,null,null,null,null,null,null,null,null]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>atual<\/th>\n      <th>lag1<\/th>\n      <th>lag2<\/th>\n      <th>lag3<\/th>\n      <th>lag4<\/th>\n      <th>lag5<\/th>\n      <th>lag6<\/th>\n      <th>lag7<\/th>\n      <th>lag8<\/th>\n      <th>lag9<\/th>\n      <th>lag10<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-center","targets":"_all"}],"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-580c8dcdcdf9425d1178" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-580c8dcdcdf9425d1178">{"x":{"filter":"none","data":[[28.61,27.8,28.19,28.26,30.36,30.42,32.76,31.95,30.89,28.24],[null,28.61,27.8,28.19,28.26,30.36,30.42,32.76,31.95,30.89],[null,null,28.61,27.8,28.19,28.26,30.36,30.42,32.76,31.95],[null,null,null,28.61,27.8,28.19,28.26,30.36,30.42,32.76],[null,null,null,null,28.61,27.8,28.19,28.26,30.36,30.42],[null,null,null,null,null,28.61,27.8,28.19,28.26,30.36],[null,null,null,null,null,null,28.61,27.8,28.19,28.26],[null,null,null,null,null,null,null,28.61,27.8,28.19],[null,null,null,null,null,null,null,null,28.61,27.8],[null,null,null,null,null,null,null,null,null,28.61],[null,null,null,null,null,null,null,null,null,null]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>atual<\/th>\n      <th>lag1<\/th>\n      <th>lag2<\/th>\n      <th>lag3<\/th>\n      <th>lag4<\/th>\n      <th>lag5<\/th>\n      <th>lag6<\/th>\n      <th>lag7<\/th>\n      <th>lag8<\/th>\n      <th>lag9<\/th>\n      <th>lag10<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-center","targets":"_all"}],"dom":"t","order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 <p>Apesar da simples correlação entre os dados nos ajudar a identificar defasagens que poderíam contribuir para o comportamento da série em <span class="math inline">\(t\)</span>, precisamos fazer uso de testes estatísticos que verifiquem a significância da relação entre o valor atual e suas lags. Neste sentido, a função de autocorrelação tem grande importância.</p>
 <p>Abaixo, um exemplo de <strong>função de autocorrelação</strong>. Observe que há duas linhas horizontais que representam os limites do teste de significância sendo que valores acima ou abaixo da linha são estatisticamente significantes. Neste documento, apresentaremos o teste que é realizado.</p>
 <p><img src="ecologico_book_files/figure-html/unnamed-chunk-18-1.png" width="672" style="display: block; margin: auto;" /></p>
