--- a/curso_2025/anexo_xml_json.html
+++ b/curso_2025/anexo_xml_json.html
@@ -65,6 +65,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
+<link href="./regex.html" rel="next">
 <link href="./anexo1.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
@@ -181,6 +182,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <div class="sidebar-item-container"> 
   <a href="./anexo_xml_json.html" class="sidebar-item-text sidebar-link active">
  <span class="menu-text">Anexo 2 - XML &amp; JSON</span></a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./regex.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Expressões Regulares</span></a>
   </div>
 </li>
     </ul>
@@ -706,6 +713,9 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       </a>          
   </div>
   <div class="nav-page nav-page-next">
+      <a href="./regex.html" class="pagination-link" aria-label="Expressões Regulares">
+        <span class="nav-page-text">Expressões Regulares</span> <i class="bi bi-arrow-right-short"></i>
+      </a>
   </div>
 </nav>
 </div> <!-- /content -->
