--- a/curso_2025/index.html
+++ b/curso_2025/index.html
@@ -150,6 +150,12 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Anexo 2 - XML &amp; JSON</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./regex.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Expressões Regulares</span></a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
