--- a/curso_2025/sql.html
+++ b/curso_2025/sql.html
@@ -184,6 +184,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
  <span class="menu-text">Anexo 2 - XML &amp; JSON</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./regex.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Expressões Regulares</span></a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
